--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root{
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -22,6 +26,9 @@ a:hover {
   color: #535bf2;
 }
 
+body{
+  height: 100vh;
+}
 /* body {
   margin: 0;
   display: flex;
@@ -29,6 +36,13 @@ a:hover {
   min-width: 320px;
   min-height: 100vh;
 } */
+
+.dropdown_page{
+  height: 100%;
+}
+.btn{
+  height: 7%;
+}
 
 h1 {
   font-size: 3.2em;
