--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,17 @@ body{
 .dropdown_page{
   height: 100%;
 }
+
+.modalDiv{
+  box-shadow: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1050;
+}
+
 .btn{
   height: 7%;
 }
