--- a/src/index.css
+++ b/src/index.css
@@ -41,15 +41,15 @@ body{
   height: 100%;
 }
 
-.modalDiv{
-  box-shadow: rgba(0,0,0,0.5);
+/* .modalDiv{
   position: fixed;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 1050;
-}
+} */
 
 .btn{
   height: 7%;
